<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/recipeDialogImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/recipe"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/recipeAboutInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipeDialogImage"
        android:text="@string/recipeabout"
        />

    <TextView
        android:id="@+id/recipeDialogTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipeinstruction"
        android:layout_below="@id/recipeAboutInfo"
        />

    <TextView
        android:id="@+id/recipeInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipeDialogTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/recipeinstructions"
/>




</RelativeLayout>